--- a/header.scss
+++ b/header.scss
@@ -1,7 +1,7 @@
 .header {
-  background: deeppink;
+  background: $main-color;
   color: white;
-  padding: 10em 1em 1em;
+  padding: 9em 1em 1em;
   text-align: right;
 
   &__logo {
