--- a/footer.scss
+++ b/footer.scss
@@ -1,8 +1,10 @@
 .footer {
+  color: #999999;
   font-variant-caps: small-caps;
   -moz-font-feature-settings: "smcp";
   -webkit-font-feature-settings: "smcp";
   font-feature-settings: "smcp";
   font-size: 0.667em;
+  padding: 2em;
   text-align: center;
 }
