--- a/header.scss
+++ b/header.scss
@@ -1,17 +1,21 @@
 .header {
   background: deeppink;
   color: white;
-  padding: 7em 1em 1em;
+  padding: 3em 1em 1em;
   text-align: center;
 
   @include tablet-and-up() {
+    display: flex;
+    flex-direction: column;
     padding-top: 9em;
     text-align: right;
   }
 
   &__logo {
+    align-self: flex-end;
     fill:currentColor;
     fill-rule:evenodd;
+    order: 2;
     width: 75%;
 
     @include tablet-and-up() {
@@ -19,17 +23,12 @@
     }
   }
 
-  &__logo-text {
-    font-family: sans-serif;
-    font-size: 6em;
-    margin: 0;
-  }
-
   &__subheading {
     font-family: Georgia, serif;
     font-size: 1em;
     font-weight: 300;
     margin: 0;
+    order: 3;
 
     @include tablet-and-up() {
       font-size: 2em;
