--- a/main.css
+++ b/main.css
@@ -1,1 +1,113 @@
-﻿body{box-sizing:border-box;font-variant-numeric:oldstyle-nums;-moz-font-feature-settings:"onum";-webkit-font-feature-settings:"onum";font-feature-settings:"onum";font-size:16px;margin:0;width:100%}@media (min-width: 769px){body{font-size:18px}}abbr{font-variant-caps:small-caps;-moz-font-feature-settings:"smcp";-webkit-font-feature-settings:"smcp";font-feature-settings:"smcp"}a{text-decoration:none;border-bottom:solid currentColor 1px}a:link,a:visited{color:deeppink}a:hover{color:#940050}.header{background:deeppink;color:white;padding:3em 1em 1em;text-align:center}@media (min-width: 769px){.header{display:flex;flex-direction:column;padding-top:9em;text-align:right}}.header__logo{align-self:flex-end;fill:currentColor;fill-rule:evenodd;order:2;width:75%}@media (min-width: 769px){.header__logo{width:500px}}.header__subheading{font-family:Georgia, serif;font-size:1em;font-weight:300;margin:0;order:3}@media (min-width: 769px){.header__subheading{font-size:2em}}.footer{color:#999999;font-variant-caps:small-caps;-moz-font-feature-settings:"smcp";-webkit-font-feature-settings:"smcp";font-feature-settings:"smcp";font-size:0.667em;padding:2em;text-align:center}.detail{margin:50px 1em}@media (min-width: 769px){.detail{margin:50px auto;width:700px}}.detail__header{color:deeppink;font-family:sans-serif;font-size:2em}.detail__subheader{color:deeppink;border-bottom:solid 1px deeppink;font-family:sans-serif}.detail__body{font-family:Georgia, serif;line-height:1.4}.detail__body:first-of-type{margin-top:0}.detail__list{padding-left:0}.detail__list-item{list-style:none;margin-bottom:1em}.detail__list-item::before{content:"☞";display:inline-block;padding:0 1em}.cta{text-align:center}.cta__link{background:white;border:solid 0.1em currentColor;border-radius:5px;color:deeppink;display:inline-block;font-family:sans-serif;font-size:1.5em;font-weight:700;padding:1em 0.5em}.cta__link:hover{background:deeppink;color:white}.cta__link:active{background:#940050;color:white}.cta--header{margin:2em 0;order:1}.cta--header .cta__link{background:deeppink;color:white}.cta--header .cta__link:hover{background:white;color:deeppink}.cta--header .cta__link:active{background:white;color:#940050}
+@charset "UTF-8";
+body {
+  background: #FCF6E6;
+  box-sizing: border-box;
+  color: #252737;
+  font-variant-numeric: oldstyle-nums;
+  -moz-font-feature-settings: "onum";
+  -webkit-font-feature-settings: "onum";
+  font-feature-settings: "onum";
+  font-size: 16px;
+  margin: 0;
+  width: 100%; }
+  @media (min-width: 769px) {
+    body {
+      font-size: 18px; } }
+
+abbr {
+  font-variant-caps: small-caps;
+  -moz-font-feature-settings: "smcp";
+  -webkit-font-feature-settings: "smcp";
+  font-feature-settings: "smcp"; }
+
+a:link, a:visited {
+  color: #3A8CD4; }
+
+a:hover {
+  color: #F33549; }
+
+.header {
+  padding: 3em 1em 1em;
+  text-align: center; }
+  @media (min-width: 769px) {
+    .header {
+      display: flex;
+      flex-direction: column;
+      padding-top: 9em;
+      text-align: right; } }
+  .header__logo {
+    align-self: center;
+    fill: #252737;
+    fill-rule: evenodd;
+    width: 75%; }
+    @media (min-width: 769px) {
+      .header__logo {
+        width: 500px; } }
+  .header__subheading {
+    font-family: Georgia, serif;
+    font-size: 1em;
+    font-weight: 300;
+    margin: 0;
+    text-align: center; }
+    @media (min-width: 769px) {
+      .header__subheading {
+        font-size: 2em; } }
+
+.footer {
+  color: #999999;
+  font-variant-caps: small-caps;
+  -moz-font-feature-settings: "smcp";
+  -webkit-font-feature-settings: "smcp";
+  font-feature-settings: "smcp";
+  font-size: 0.667em;
+  padding: 2em;
+  text-align: center; }
+
+.detail {
+  margin: 5em 1em; }
+  @media (min-width: 769px) {
+    .detail {
+      margin: 7em auto;
+      width: 700px; } }
+  .detail__header {
+    font-family: sans-serif;
+    font-size: 2em; }
+  .detail__subheader {
+    color: #252737;
+    border-bottom: solid 1px #252737;
+    font-family: sans-serif; }
+  .detail__body {
+    font-family: Georgia, serif;
+    line-height: 1.4; }
+  .detail__body:first-of-type {
+    margin-top: 0; }
+  .detail__list {
+    padding-left: 0; }
+  .detail__list-item {
+    list-style: none;
+    margin-bottom: 1em; }
+    .detail__list-item::before {
+      content: "☞";
+      display: inline-block;
+      padding: 0 1em; }
+
+.cta {
+  text-align: center; }
+  .cta__link {
+    background: #3A8CD4;
+    border-radius: 5px;
+    display: inline-block;
+    font-family: sans-serif;
+    font-size: 1.5em;
+    font-weight: 700;
+    padding: 1em 0.5em;
+    text-decoration: none; }
+    .cta__link:link, .cta__link:visited {
+      color: #FCF6E6; }
+    .cta__link:hover {
+      background: #23659f; }
+    .cta__link:active {
+      background: #FDDC68;
+      color: #252737; }
+  .cta--header {
+    margin: 2em 0; }
