--- a/main.css
+++ b/main.css
@@ -1,69 +1,6 @@
 @charset "UTF-8";
-body {
-  background: #FCF6E6;
-  box-sizing: border-box;
-  color: #252737;
-  font-variant-numeric: oldstyle-nums;
-  -moz-font-feature-settings: "onum";
-  -webkit-font-feature-settings: "onum";
-  font-feature-settings: "onum";
-  font-size: 16px;
-  margin: 0;
-  width: 100%; }
-  @media (min-width: 769px) {
-    body {
-      font-size: 18px; } }
-
-abbr {
-  font-variant-caps: small-caps;
-  -moz-font-feature-settings: "smcp";
-  -webkit-font-feature-settings: "smcp";
-  font-feature-settings: "smcp"; }
-
-a:link, a:visited {
-  color: #3A8CD4; }
-
-a:hover {
-  color: #F33549; }
-
-.header {
-  padding: 3em 1em 1em;
-  text-align: center; }
-  @media (min-width: 769px) {
-    .header {
-      display: flex;
-      flex-direction: column;
-      padding-top: 9em;
-      text-align: right; } }
-  .header__logo {
-    align-self: center;
-    fill: #252737;
-    fill-rule: evenodd;
-    width: 75%; }
-    @media (min-width: 769px) {
-      .header__logo {
-        width: 500px; } }
-  .header__subheading {
-    font-family: Georgia, serif;
-    font-size: 1em;
-    font-weight: 300;
-    margin: 0;
-    text-align: center; }
-    @media (min-width: 769px) {
-      .header__subheading {
-        font-size: 2em; } }
-
-.footer {
-  color: #999999;
-  font-variant-caps: small-caps;
-  -moz-font-feature-settings: "smcp";
-  -webkit-font-feature-settings: "smcp";
-  font-feature-settings: "smcp";
-  font-size: 0.667em;
-  padding: 2em;
-  text-align: center; }
-
 .detail {
+  height: 100vh;
   margin: 5em 1em; }
   @media (min-width: 769px) {
     .detail {
@@ -90,24 +27,3 @@ a:hover {
       content: "☞";
       display: inline-block;
       padding: 0 1em; }
-
-.cta {
-  text-align: center; }
-  .cta__link {
-    background: #3A8CD4;
-    border-radius: 5px;
-    display: inline-block;
-    font-family: sans-serif;
-    font-size: 1.5em;
-    font-weight: 700;
-    padding: 1em 0.5em;
-    text-decoration: none; }
-    .cta__link:link, .cta__link:visited {
-      color: #FCF6E6; }
-    .cta__link:hover {
-      background: #23659f; }
-    .cta__link:active {
-      background: #FDDC68;
-      color: #252737; }
-  .cta--header {
-    margin: 2em 0; }
