--- a/main.scss
+++ b/main.scss
@@ -4,6 +4,7 @@ body {
   background: $newspaper;
   box-sizing: border-box;
   color: $newsprint;
+  font-family: Georgia, serif;
   font-variant-numeric: oldstyle-nums;
   -moz-font-feature-settings: "onum";
   -webkit-font-feature-settings: "onum";
