--- a/detail.scss
+++ b/detail.scss
@@ -2,12 +2,12 @@
 
 .detail {
   display: flex;
-  margin: auto;
+  margin: 3em auto;
   width: 90%;
 
   &__col {
     box-sizing: border-box;
-    flex: 1 1 auto;
+    width: 33%;
     padding: 1em;
 
     &--centered {
@@ -17,6 +17,10 @@
   }
 
   @include tablet-and-up() {
+  }
+
+  &__image {
+    width: 100%;
   }
 
   &__header {
