--- a/header.scss
+++ b/header.scss
@@ -5,12 +5,13 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: 5em 1em;
-  padding: 3em 1em 1em;
+  margin: 1em;
+  padding: 1em;
   text-align: center;
 
   @include tablet-and-up() {
     margin: auto;
+    padding: 3em 1em 1em;
     width: 700px;
   }
 
