--- a/main.css
+++ b/main.css
@@ -32,12 +32,13 @@ a:hover {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: 5em 1em;
-  padding: 3em 1em 1em;
+  margin: 1em;
+  padding: 1em;
   text-align: center; }
   @media (min-width: 769px) {
     .header {
       margin: auto;
+      padding: 3em 1em 1em;
       width: 700px; } }
   .header__logo {
     align-self: center;
@@ -73,44 +74,76 @@ a:hover {
   padding: 2em;
   text-align: center; }
 
-.detail {
-  display: flex;
-  margin: 3em auto;
-  width: 90%; }
-  .detail__col {
-    box-sizing: border-box;
-    width: 33%;
-    padding: 1em; }
-    .detail__col--centered {
-      align-self: center;
-      flex-shrink: 0; }
-  .detail__image {
-    width: 100%; }
-  .detail__header {
-    font-family: sans-serif;
-    font-size: 2em; }
-  .detail__subheader {
-    color: #252737;
-    border-bottom: solid 1px #252737;
-    font-family: sans-serif; }
-  .detail__body {
-    font-family: Georgia, serif;
-    line-height: 1.4;
-    text-align: left; }
-  .detail__body:first-of-type {
-    margin-top: 0; }
-  .detail__list {
-    padding-left: 0; }
-  .detail__list-item {
-    list-style: none;
-    margin-bottom: 1em; }
-    .detail__list-item::before {
-      content: "☞";
-      display: inline-block;
-      padding: 0 1em; }
+@media (min-width: 1080px) {
+  .detail--flipped-desktop .detail__col:first-child {
+    order: 3; } }
+
+.detail__col {
+  box-sizing: border-box;
+  padding: 1em; }
+  @media (min-width: 769px) {
+    .detail__col {
+      width: 50%; }
+      .detail__col:first-child {
+        width: 100%; } }
+  @media (min-width: 1080px) {
+    .detail__col {
+      width: 33%; }
+      .detail__col:first-child {
+        width: 33%; } }
+  .detail__col:first-child {
+    text-align: center; }
+  .detail__col--centered {
+    align-self: center;
+    flex-shrink: 0; }
+
+@media (min-width: 769px) {
+  .detail {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 3em auto;
+    width: 90%; } }
+
+.detail__image {
+  max-height: 50vh;
+  max-width: 80vw; }
+  @media (min-width: 1080px) {
+    .detail__image {
+      max-width: 100%; } }
+
+.detail__header {
+  font-family: sans-serif;
+  font-size: 2em; }
+
+.detail__subheader {
+  color: #252737;
+  border-bottom: solid 1px #252737;
+  font-family: sans-serif; }
+
+.detail__body {
+  font-family: Georgia, serif;
+  line-height: 1.4;
+  text-align: left; }
+
+.detail__body:first-of-type {
+  margin-top: 0; }
+
+.detail__list {
+  padding-left: 0; }
+
+.detail__list-item {
+  list-style: none;
+  margin-bottom: 1em; }
+  .detail__list-item::before {
+    content: "☞";
+    display: inline-block;
+    padding: 0 1em; }
 
 .cta {
   text-align: center; }
+  .cta--small .cta__link {
+    font-size: 1em;
+    padding: 0.5em; }
   .cta__link {
     background: #3A8CD4;
     border-radius: 5px;
