--- a/header.scss
+++ b/header.scss
@@ -1,21 +1,24 @@
+@import "variables";
+
 .header {
-  background: deeppink;
-  color: white;
-  padding: 3em 1em 1em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 1em;
+  padding: 1em;
   text-align: center;
 
   @include tablet-and-up() {
-    display: flex;
-    flex-direction: column;
-    padding-top: 9em;
-    text-align: right;
+    margin: auto;
+    padding: 3em 1em 1em;
+    width: 700px;
   }
 
   &__logo {
-    align-self: flex-end;
-    fill:currentColor;
-    fill-rule:evenodd;
-    order: 2;
+    align-self: center;
+    fill: $newsprint;
+    fill-rule: evenodd;
     width: 75%;
 
     @include tablet-and-up() {
@@ -24,14 +27,22 @@
   }
 
   &__subheading {
+    border-bottom: solid 1px $newsprint;
     font-family: Georgia, serif;
     font-size: 1em;
     font-weight: 300;
-    margin: 0;
-    order: 3;
+    margin: 0 0 1em 0;
+    padding: 0 0 1em 0;
+    text-align: center;
 
     @include tablet-and-up() {
       font-size: 2em;
     }
+  }
+
+  &__blurb {
+    font-family: Georgia, serif;
+    line-height: 1.4;
+    text-align: left;
   }
 }
